* SimpleMutex class, documentation and test.  Main goal is to have a class      that will do mutexes if linked against pthread, but won't otherwise.      PThreadMutex can't do this because it wants to enable debugging mutexes,      in debugging mode, and those functions force the use of libpthread.

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(INCLUDE_FILES
 	Posix.hpp
 	PriorityQueue.hpp
 	RotatingHashMap.hpp
+	SimpleMutex.hpp
 	Stats.hpp
 	StatsEMA.hpp
 	StatsHistogram.hpp
