* Add in the Logging code from TiColi; re-write portions so that it can      be integrated with alternative ways of printing out the output.  Add      in documentation and regression tests.    * Copy the xml attribute extractor from DataSeries into Lintel for use      by the logging code's xml extension.
LintelLog.[ch]pp: header file for the logging code

LintelLogXML.[ch]pp: extention to LintelLog to parse XML elements for 
  debugging options

XMLUtil.[ch]pp: simple utility function for extracting attributes as
  C++ strings

lintel_log.cpp: regression test for LintelLog

run-check-lintel-log.sh: script to run the regression test and verify
  that the output goes to stdout/stderr as appropriate

xmlutil.cpp: regression test for XMLUtil

lintellogxml.cpp: regression test for LintelLogXML

CMakeConfig.txt: Re-shuffle ordering to keep all the parsing bits together.
  Add search for libxml2

include/Lintel/CMakeLists.txt: new header files; move boost ones into
  the unconditional section, switch to using LIST(APPEND ...) for adding
  optional bits and fix indentation.

SimpleMutex.hpp: add missing #ifndef protection

src/CMakeLists.txt: add new source files, make Boost unconditional, 
  switch to using LIST(APPEND ...) for adding optional bits, and fix
  indentation.

src/tests/CMakeLists.txt: add in the new tests.  Fix indentation.

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -6,6 +6,7 @@
 # cmake description for the include directory
 
 SET(INCLUDE_FILES
+	AssertBoost.hpp
 	AssertException.hpp
 	Clock.hpp
 	CompilerMarkup.hpp
@@ -17,6 +18,7 @@ SET(INCLUDE_FILES
 	HashUnique.hpp
 	LeastSquares.hpp
 	LintelAssert.hpp
+	LintelLog.hpp
 	LintelVersion.hpp
 	MathSpecialFunctions.hpp
 	Matrix.hpp
@@ -39,6 +41,7 @@ SET(INCLUDE_FILES
 )
 
 SET(TRANSITIONAL_INCLUDE_FILES
+	AssertBoost.H
 	AssertException.H
 	Clock.H
 	CompilerMarkup.H
@@ -71,33 +74,35 @@ SET(TRANSITIONAL_INCLUDE_FILES
 
 ################################## CONDITIONAL BITS
 
-SET(INCLUDE_FILES ${INCLUDE_FILES} AssertBoost.hpp)
-SET(TRANSITIONAL_INCLUDE_FILES ${TRANSITIONAL_INCLUDE_FILES} AssertBoost.H)
-
 IF(ENABLE_STDIO64) 
-  SET(INCLUDE_FILES ${INCLUDE_FILES} stdio_64.hpp)
-  SET(TRANSITIONAL_INCLUDE_FILES ${TRANSITIONAL_INCLUDE_FILES} stdio_64.H)
+    LIST(APPEND INCLUDE_FILES stdio_64.hpp)
+    LIST(APPEND TRANSITIONAL_INCLUDE_FILES stdio_64.H)
 ENDIF(ENABLE_STDIO64)
 
 IF(TCL_ENABLED)
-  SET(INCLUDE_FILES ${INCLUDE_FILES} 
-	Nameable.hpp
-	Random.hpp
-	Randommwm.hpp
-	TclInterface.hpp)
-
-  SET(TRANSITIONAL_INCLUDE_FILES ${TRANSITIONAL_INCLUDE_FILES} 
-	Nameable.H
-	Random.H
-	Randommwm.H
-	TclInterface.H)
+    LIST(APPEND INCLUDE_FILES 
+  	Nameable.hpp
+  	Random.hpp
+  	Randommwm.hpp
+  	TclInterface.hpp)
+  
+    LIST(APPEND TRANSITIONAL_INCLUDE_FILES 
+  	Nameable.H
+  	Random.H
+  	Randommwm.H
+  	TclInterface.H)
 ENDIF(TCL_ENABLED)
 
 IF(THREADS_ENABLED)
-  SET(INCLUDE_FILES ${INCLUDE_FILES} PThread.hpp)
-  SET(TRANSITIONAL_INCLUDE_FILES ${TRANSITIONAL_INCLUDE_FILES} PThread.H)
+    LIST(APPEND INCLUDE_FILES PThread.hpp)
+    LIST(APPEND TRANSITIONAL_INCLUDE_FILES PThread.H)
 ENDIF(THREADS_ENABLED)
   
+IF(LIBXML2_ENABLED)
+    LIST(APPEND INCLUDE_FILES LintelLogXML.hpp XMLUtil.hpp)
+ENDIF(LIBXML2_ENABLED)
+
+
 ################################## INSTALL
 
 INSTALL(FILES ${INCLUDE_FILES} ${TRANSITIONAL_INCLUDE_FILES}
