--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ INCLUDE_DIRECTORIES(
 ADD_DEFINITIONS(-DLIBLINTEL_VERSION="\\"${LINTEL_VERSION}\\"")
 
 SET(LIBLINTEL_SOURCES
+	AssertBoost.cpp
 	AssertException.cpp
 	Clock.cpp
 	ConstantString.cpp
@@ -22,6 +23,7 @@ SET(LIBLINTEL_SOURCES
 	HashTable.cpp
 	LeastSquares.cpp
 	LintelAssert.cpp
+	LintelLog.cpp
 	LintelVersion.cpp
 	MathSpecialFunctions.cpp
 	Matrix.cpp
@@ -73,58 +75,66 @@ LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
 ################################## CONDITIONAL BITS
 
 IF(ENABLE_STDIO64)
-  LIST(APPEND LINTEL_FEATURES stdio64)
-  SET(LIBLINTEL_SOURCES ${LIBLINTEL_SOURCES} stdio_64.cpp)
+    LIST(APPEND LINTEL_FEATURES stdio64)
+    LIST(APPEND LIBLINTEL_SOURCES stdio_64.cpp)
 ENDIF(ENABLE_STDIO64)
 
-SET(LIBLINTEL_SOURCES ${LIBLINTEL_SOURCES} AssertBoost.cpp)
-
 IF(THREADS_ENABLED)
-  LIST(APPEND LINTEL_FEATURES threads)
-  SET(LIBLINTELPTHREAD_SOURCES PThread.cpp ClockPThread.cpp)
+    LIST(APPEND LINTEL_FEATURES threads)
+    SET(LIBLINTELPTHREAD_SOURCES PThread.cpp ClockPThread.cpp)
 ENDIF(THREADS_ENABLED)
 
 IF(TCL_ENABLED)
-  LIST(APPEND LINTEL_FEATURES tcl)
-  SET(TCL_HEADERS ${Lintel_SOURCE_DIR}/include/Lintel/Random.hpp)
-  INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
-
-  LINTEL_INSTALL_CONFIG_PROGRAM(buildTcl)
-  ADD_CUSTOM_COMMAND(
-    OUTPUT
-      ${CMAKE_CURRENT_BINARY_DIR}/LintelTclCommands.cpp
-    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/buildTcl
-    ARGS -- -o ${CMAKE_CURRENT_BINARY_DIR}/LintelTclCommands.cpp -t ${TCL_HEADERS}
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/buildTcl ${TCL_HEADERS}
-  )
-
-  SET(LIBLINTEL_SOURCES ${LIBLINTEL_SOURCES}
-	${CMAKE_CURRENT_BINARY_DIR}/LintelTclCommands.cpp
-	Nameable.cpp
-	Random.cpp
-	Randommwm.cpp
-	TclInterface.cpp)
+    LIST(APPEND LINTEL_FEATURES tcl)
+    SET(TCL_HEADERS ${Lintel_SOURCE_DIR}/include/Lintel/Random.hpp)
+    INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
+  
+    LINTEL_INSTALL_CONFIG_PROGRAM(buildTcl)
+    ADD_CUSTOM_COMMAND(
+        OUTPUT
+          ${CMAKE_CURRENT_BINARY_DIR}/LintelTclCommands.cpp
+        COMMAND ${CMAKE_CURRENT_BINARY_DIR}/buildTcl
+        ARGS -- -o ${CMAKE_CURRENT_BINARY_DIR}/LintelTclCommands.cpp -t ${TCL_HEADERS}
+        DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/buildTcl ${TCL_HEADERS}
+    )
+  
+    SET(LIBLINTEL_SOURCES ${LIBLINTEL_SOURCES}
+  	${CMAKE_CURRENT_BINARY_DIR}/LintelTclCommands.cpp
+  	Nameable.cpp
+  	Random.cpp
+  	Randommwm.cpp
+  	TclInterface.cpp)
 ENDIF(TCL_ENABLED)
+
+IF(LIBXML2_ENABLED)
+    INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
+    LIST(APPEND LINTEL_FEATURES libxml2)
+    LIST(APPEND LIBLINTEL_SOURCES LintelLogXML.cpp XMLUtil.cpp)
+ENDIF(LIBXML2_ENABLED)
 
 ################################## LIBRARY
 
 ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
 SET_TARGET_PROPERTIES(Lintel 
-  PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
+    PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
 
 ################################## CONDITIONAL LIBRARY
 
 IF(TCL_ENABLED) 
-TARGET_LINK_LIBRARIES(Lintel ${TCL_LIBRARY})
+    TARGET_LINK_LIBRARIES(Lintel ${TCL_LIBRARY})
 ENDIF(TCL_ENABLED)
 
 IF(THREADS_ENABLED)
-  ADD_LIBRARY(LintelPThread ${LIBRARY_TYPE} ${LIBLINTELPTHREAD_SOURCES})
-  ADD_DEPENDENCIES(LintelPThread Lintel)
-  SET_TARGET_PROPERTIES(LintelPThread
-    PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
-  TARGET_LINK_LIBRARIES(LintelPThread Lintel ${CMAKE_THREAD_LIBS_INIT})
+    ADD_LIBRARY(LintelPThread ${LIBRARY_TYPE} ${LIBLINTELPTHREAD_SOURCES})
+    ADD_DEPENDENCIES(LintelPThread Lintel)
+    SET_TARGET_PROPERTIES(LintelPThread
+        PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
+    TARGET_LINK_LIBRARIES(LintelPThread Lintel ${CMAKE_THREAD_LIBS_INIT})
 ENDIF(THREADS_ENABLED)
+
+IF(LIBXML2_ENABLED)
+    TARGET_LINK_LIBRARIES(Lintel ${LIBXML2_LIBRARIES})
+ENDIF(LIBXML2_ENABLED)
 
 ################################## INSTALL
 
