* Move the functions for dealing with casting pointers out of ticoli and      into Lintel.  Add documentation and regresion tests.
PointerUtil.hpp: new pointer casting functions

pointerutil.cpp: regression test

CMakeConfig.txt: separate out the library type and doxygen bits, they 
  were incorrectly intermingled.

include/Lintel/CMakeLists.txt: new header to install

src/tests/CMakeLists.txt: new test to run.

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(INCLUDE_FILES
 	MathSpecialFunctions.hpp
 	Matrix.hpp
 	MersenneTwisterRandom.hpp
+	PointerUtil.hpp
 	Posix.hpp
 	PriorityQueue.hpp
 	RotatingHashMap.hpp
