* Rename LintelFindLibrary.cmake to LintelFind.cmake, add in      LINTEL_FIND_PROGRAM macro.  Update to have consistent      LINTEL_FIND_*, LINTEL_WITH_*, LINTEL_REQUIRED_* macros.
Find*.cmake: switch include

LintelCMakeUtil.cmake: add TODO

--- a/cmake-modules/CMakeLists.txt
+++ b/cmake-modules/CMakeLists.txt
@@ -4,7 +4,7 @@ SET(CMAKE_MODULE_FILES
 	FindLintel.cmake
 	FindLZO.cmake
 	LintelCMakeUtil.cmake
-	LintelFindLibrary.cmake
+	LintelFind.cmake
 )
 
 INSTALL(FILES ${CMAKE_MODULE_FILES}
