* Modify so that we have a generic documentation installation cmake      module; I had the same code in three separate places.
LintelDocs.cmake: the new module; the top explains how to use it;
  two lines in the config file, two lines in the doc/CMakeLists.txt

CMakeConfig.txt: switch to the new docs config

CMakeLists.txt: set the module path and don't specify a path for
  LintelCMakeUtil

cmake-modules/CMakeLists.txt: install the new module

doc/CMakeLists.txt: switch to the new docs building, install the
  doxygen.config.in file so it can be used by other projects.

doxygen.config.in: make the config file general across projects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,10 @@ PROJECT(Lintel)
 SET(LINTEL_VERSION 0.0)
 SET(LINTEL_ABI_VERSION 0)
 
+SET(CMAKE_MODULE_PATH "${Lintel_SOURCE_DIR}/cmake-modules")
+
 INCLUDE("CMakeConfig.txt")
-INCLUDE("cmake-modules/LintelCMakeUtil.cmake")
+INCLUDE(LintelCMakeUtil)
 
 ENABLE_TESTING()
 
