--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -5,37 +5,9 @@
 #
 # cmake description for the doc directory
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.4.4 FATAL_ERROR)
+INCLUDE(LintelDocs)
 
-# For windows documentation install, see:
-# http://www.cmake.org/pipermail/cmake/2006-August/010786.html
+LINTEL_DOCS_BUILD()
 
-IF (DOXYGEN_FOUND)
-    CONFIGURE_FILE(doxygen.config.in ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config @ONLY)
- 
-    FILE(GLOB_RECURSE DOXYGEN_DEP_INCLUDES ${Lintel_SOURCE_DIR}/*.hpp)
-    FILE(GLOB_RECURSE DOXYGEN_DEP_SOURCES ${Lintel_SOURCE_DIR}/*.cpp)
- 
-    ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html/index.html
- 	              COMMAND ${DOXYGEN_EXECUTABLE} 
- 		   	      ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config
-  		      DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config
- 		              ${DOXYGEN_DEP_INCLUDES}
- 			      ${DOXYGEN_DEP_SOURCES}
-                       )
- 
-    ADD_CUSTOM_TARGET(doc ALL 
- 	  	     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html/index.html)
- 
-    # TODO: figure out how to clean; the following doesn't work.
-    # SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES doxygen)
-    
-    # INSTALL is not scriptable, so we can't have an INSTALL(DIRECTORY ...)
-    # bit either in a code block or a script block.  We also can't have just
-    # an install target because the files don't exist until after we do the
-    # build.
- 
-    #INSTALL(CODE "INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/Lintel/)")
- 
-    INSTALL(CODE "EXEC_PROGRAM(${CMAKE_CURRENT_SOURCE_DIR}/install-doxygen.sh ARGS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_INSTALL_PREFIX}/share)")
-ENDIF (DOXYGEN_FOUND)
+INSTALL(FILES doxygen.config.in 
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/share/Lintel)
