Port to cygwin:
Missing implementations:
	wstring support
	cycle counter for Clock
		ctest -R clock fails

include/Lintel/Random.hpp
include/Lintel/StatsHistogram.hpp
src/StatsHistogram.cpp
	no values.h

include/Lintel/Random.hpp
	no MAXINT; use INT_MAX

include/Lintel/StringUtil.hpp
src/StringUtil.cpp
	cygwin has no wstring, so don't implement
	string2wstring, wstring2string

src/CMakeLists.txt
	install cyg*.dll in ${CMAKE_INSTALL_PREFIX}/bin

src/Clock.cpp
	change if(__linux__) to #ifdef __linux__

src/Double.cpp
	cygwin has no fpu_control.h;
	don't implement setFP64BitMode(), resetFPMode()

src/LintelLog.cpp
	change HashMap<string, unsigned>::iterator to
	HashMap<string, uint32_t>::iterator

src/PThread.cpp
	cygwin doesn't implement 
	pthread_attr_setguardsize
	pthread_attr_getguardsize

src/StringUtil.cpp
	don't use struct addrinfo, getaddrinfo in getHostFQDN()
	just return gethostname()

src/tests/stringutil.cpp
	different strerror output
	(Success becomes No error)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,9 @@ ENDIF(LIBXML2_ENABLED)
 INSTALL(TARGETS calcStats drawRandomLogNormal
 	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 INSTALL(TARGETS Lintel DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+IF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
+  INSTALL(TARGETS Lintel DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
 LINTEL_INSTALL_CONFIG_PROGRAM(batch-parallel)
 LINTEL_INSTALL_CONFIG_PROGRAM(mercury-plot)
 LINTEL_INSTALL_CONFIG_PROGRAM(lintel-config)
@@ -150,4 +153,7 @@ LINTEL_INSTALL_CONFIG_FILE(redhat-rules
 
 IF(THREADS_ENABLED)
   INSTALL(TARGETS LintelPThread DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+  IF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
+    INSTALL(TARGETS LintelPThread DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+  ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
 ENDIF(THREADS_ENABLED)
