* Apply heavily modified version of patch from Steven Watanabe to make      the hashmap hash function operate on all the different integer types      through template magic.    * Add test program for hashmap
hashmap.cpp: new test program for hashmap; verifies we work with lots
  of different int types. and compile for strings/char *.

HashMap.hpp: lots of magic for doing template trickery for hashing all
  different types of ints.

CMakeLists.txt: add new hashmap test; re-sort tests alphabetically

least_squares.cpp: found old use of .H, fixed.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -17,16 +17,17 @@ ENDMACRO(LINTEL_SIMPLE_TEST)
 
 ################################## TESTS
 
+LINTEL_SIMPLE_TEST(clock)
+LINTEL_SIMPLE_TEST(hashtable)
+LINTEL_SIMPLE_TEST(hashmap)
+LINTEL_SIMPLE_TEST(least_squares)
+LINTEL_SIMPLE_TEST(mersenneTwister)
+LINTEL_SIMPLE_TEST(pointerutil)
+LINTEL_SIMPLE_TEST(rotating_hashmap)
+LINTEL_SIMPLE_TEST(simple_mutex)
 LINTEL_SIMPLE_TEST(stats)
 LINTEL_SIMPLE_TEST(stats_quantile)
 LINTEL_SIMPLE_TEST(stats_sequence)
-LINTEL_SIMPLE_TEST(clock)
-LINTEL_SIMPLE_TEST(hashtable)
-LINTEL_SIMPLE_TEST(mersenneTwister)
-LINTEL_SIMPLE_TEST(least_squares)
-LINTEL_SIMPLE_TEST(rotating_hashmap)
-LINTEL_SIMPLE_TEST(simple_mutex)
-LINTEL_SIMPLE_TEST(pointerutil)
 LINTEL_SIMPLE_TEST(stringutil)
 
 ################################## SPECIAL TEST PROGRAMS
