--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,10 @@ INCLUDE_DIRECTORIES(
 
 ADD_DEFINITIONS(-DLIBLINTEL_VERSION="\\"${LINTEL_VERSION}\\"")
 
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    ADD_DEFINITIONS(-Wall)
+ENDIF(CMAKE_COMPILER_IS_GNUCXX)
+
 SET(LIBLINTEL_SOURCES
 	AssertBoost.cpp
 	AssertException.cpp
