CMakeLists.txt: [BUGFIX] don't override the CMAKE_MODULE_PATH, insert into it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ PROJECT(Lintel)
 SET(LINTEL_VERSION 0.0)
 SET(LINTEL_ABI_VERSION 0)
 
-SET(CMAKE_MODULE_PATH "${Lintel_SOURCE_DIR}/cmake-modules")
+SET(CMAKE_MODULE_PATH "${Lintel_SOURCE_DIR}/cmake-modules" ${CMAKE_MODULE_PATH})
 
 INCLUDE("CMakeConfig.txt")
 INCLUDE(LintelCMakeUtil)
