* Add in the flock program that makes it easier to achive atomicity      in scripts and commands.
Lock.pm: module; split out from flock.pl

lintel-flock.in: script; see lintel-flock --man for usage

flock.sh: tests that it's working correctly.

LintelCMakeUtil.cmake: verified that we can override PERL5LIB in tests so 
  we can avoid the second half of the inc_unshift substitution

src/CMakeLists.txt: install Lock.pm, lintel-flock

src/tests/CMakeLists.txt: test flock

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -43,6 +43,8 @@ ADD_TEST(lintel_log ${CMAKE_CURRENT_SOURCE_DIR}/run-check-lintel-log.sh)
 LINTEL_SIMPLE_PROGRAM(testutil)
 ADD_TEST(test_util ${CMAKE_CURRENT_SOURCE_DIR}/run-check-test-util.sh)
 
+ADD_TEST(flock ${CMAKE_CURRENT_SOURCE_DIR}/flock.sh ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_BINARY_DIR}/.. ${CMAKE_INSTALL_PREFIX})
+
 ################################## CONDITIONAL BITS
 
 IF(ENABLE_CLOCK_TEST)
