* Fix isLocked so that it actually works, dunno how I thought it worked      before.  Add a test to verify that it works.
pthread.cpp: new tests for pthread, very rudimentary right now.

PThread.hpp: rename islocked to isLocked, fix the #elsif to be #elif, an the
  check to not test for __need_schedparam since that isn't actually set.
  defined LINTEL_PTHREAD_ISLOCKED_AVAILABLE to 1 if we have a working isLocked.

CMakeLists.txt: run the test if threads are enabled.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -63,3 +63,7 @@ IF(LIBXML2_ENABLED)
     LINTEL_SIMPLE_TEST(lintellogxml)
 ENDIF(LIBXML2_ENABLED)
 
+IF(THREADS_ENABLED)
+    LINTEL_SIMPLE_TEST(pthread)
+    TARGET_LINK_LIBRARIES(pthread LintelPThread)
+ENDIF(THREADS_ENABLED)
