* Switch to compiling things to figure out how to determine if a mutex      is locked.  Can't figure out something that works on both debian stable      and debian testing.
PThread.hpp.in: now a .in file as we substitute in how to figure out if 
  something is locked and whether we can.

config/linux-islocked-?.cpp: two ways of determining mutex locked state

CMakeConfig.txt: figure out how to determine if things are locked

include/Lintel/CMakeLists.txt: PThread.hpp moved

src/CMakeLists.txt: need binary include dir to build

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -96,7 +96,7 @@ IF(TCL_ENABLED)
 ENDIF(TCL_ENABLED)
 
 IF(THREADS_ENABLED)
-    LIST(APPEND INCLUDE_FILES PThread.hpp)
+    LIST(APPEND INCLUDE_FILES ${CMAKE_CURRENT_BINARY_DIR}/PThread.hpp)
     LIST(APPEND TRANSITIONAL_INCLUDE_FILES PThread.H)
 ENDIF(THREADS_ENABLED)
   
