--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -1,4 +1,4 @@
-/*
+/* -*- C++ -*-
    (c) Copyright 2000-2005, Hewlett-Packard Development Company, LP
 
    See the file named COPYING for license details
@@ -115,17 +115,10 @@ public:
     }
     
     bool isLocked() const {
-#define LINTEL_PTHREAD_ISLOCKED_AVAILABLE 1
-#if HPUX_ACC
-	// so amazingly non portable, but seems to work; unfortunately will
-	// silently break.
-	return ((char *)&m)[67] == 0;
-#elif defined(__GNUC__) && defined(_PTHREAD_H) && defined(_BITS_SIGTHREAD_H) && defined(_BITS_PTHREADTYPES_H)
-	// hopefully this is enough to identify the glibc implementation
-	return m.__m_lock.__status != 0;
+#define LINTEL_PTHREAD_ISLOCKED_AVAILABLE @HAS_PTHREAD_ISLOCKED@
+#if @HAS_PTHREAD_ISLOCKED@
+	return @PTHREAD_ISLOCKED_EXPR@;
 #else
-#undef LINTEL_PTHREAD_ISLOCKED_AVAILABLE
-#define LINTEL_PTHREAD_ISLOCKED_AVAILABLE 0
 	FATAL_ERROR("don't know how to implement PThreadMutex.islocked() on this platform");
 #endif
     }
