--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@
 
 INCLUDE_DIRECTORIES(
 	${Lintel_SOURCE_DIR}/include
+	${Lintel_BINARY_DIR}/include
 	${CMAKE_CURRENT_BINARY_DIR}/include
 	${Boost_INCLUDE_DIRS}
 	)
