* Add cmake module+script to deal with building latex things; this      replaces the makefile that we've been copying around and editing      for a while. Can't figure out how to test it in Lintel since we      don't have a user guide, but it's used in DataSeries now to build      the tr.
lintel-latex-rebuild.in: script that does the latex rebuild.  It wasn't 
  obvious how to build a loop in cmake, and you need one to build latex
  files correctly.  This also improves on the previous makefile by just
  summarizing the warnings if the build is successful or the end of the
  build log if there is an error.

CMakeConfig.txt: Minor fix to the pthread mutex config to avoid
  printing out a message if we have already successfully figured out
  how to determine if a mutex is locked.  Add in the bits to test to
  see if we have latex and the related programs.

LintelCMakeUtil.cmake: add module for doing the config part of the
  latex cmake stuff (find the script, provide a with option), and the
  actual piece that rebuilds the dvi,ps,pdf files, auto-determines most
  of the dependencies and adds the custom command/target.

src/CMakeLists.txt: configure and install lintel-latex-rebuild

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,6 +118,10 @@ IF(LIBXML2_ENABLED)
     LIST(APPEND LIBLINTEL_SOURCES LintelLogXML.cpp XMLUtil.cpp)
 ENDIF(LIBXML2_ENABLED)
 
+IF(LATEX_ENABLED)
+    LINTEL_INSTALL_CONFIG_PROGRAM(lintel-latex-rebuild)
+ENDIF(LATEX_ENABLED)
+
 ################################## LIBRARY
 
 ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
