* Add in deptool, which will be the replacement for the zsh-buildfns      once it's completed.  Currently you really don't want to be using      it, it only does init and checkout, and it may not get checkout      right.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -155,10 +155,11 @@ IF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
   INSTALL(TARGETS Lintel DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
 LINTEL_INSTALL_CONFIG_PROGRAM(batch-parallel)
-LINTEL_INSTALL_CONFIG_PROGRAM(mercury-plot)
+LINTEL_INSTALL_CONFIG_PROGRAM(deptool)
 LINTEL_INSTALL_CONFIG_PROGRAM(lintel-config)
 LINTEL_INSTALL_CONFIG_PROGRAM(lintel-acinclude)
 LINTEL_INSTALL_CONFIG_PROGRAM(lintel-flock)
+LINTEL_INSTALL_CONFIG_PROGRAM(mercury-plot)
 LINTEL_INSTALL_CONFIG_FILE(redhat-rules 
 	${CMAKE_INSTALL_PREFIX}/share/packaging)
 
